[tool.poetry]
name = "notes-to-icd"
version = "0.1.0"
description = ""
authors = ["John Ciubuc <john.ciubuc@ttuhsc.edu>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.1"
pandas = "^1.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
